--- a/unterhaltsreinigung.html
+++ b/unterhaltsreinigung.html
@@ -228,7 +228,6 @@
       font-weight: 500;
     }
 
-    /* letzte Kachel neutral grau ohne Bildgefühl */
     .area-tile--plain {
       background: #e5e7eb;
     }
@@ -339,7 +338,8 @@
       <h2 class="hero-subtitle">Sauberkeit, auf die Sie sich verlassen können</h2>
       <p>
         Sauberkeit mit System: Unsere Fachkräfte sorgen täglich für gepflegte und hygienische Räume –
-        mit umweltfreundlichen Reinigungsmitteln und modernster Technik.
+        mit umweltfreundlichen Reinigungsmitteln und modernster Technik schaffen wir eine Umgebung,
+        in der sich Ihre Mitarbeiter wohlfühlen, Besucher beeindruckt sind und alles professionell gepflegt bleibt.
       </p>
     </section>
 
