--- a/dienstleistungen.html
+++ b/dienstleistungen.html
@@ -183,6 +183,7 @@
       flex-direction: column;
       gap: 22px;
       margin-top: 10px;
+      margin-bottom: 24px; /* Abstand nach Hauswartung */
     }
 
     .service-link {
@@ -281,20 +282,21 @@
       line-height: 1.4;
     }
 
+    /* Farben gemäss Palette */
     .phase-1 {
-      background: #0063A5; /* Blau */
+      background: #00609D; /* Blau 100 % */
     }
 
     .phase-2 {
-      background: #4ca3dd; /* Hellblau */
+      background: #2A7CAD; /* Blau ca. 80 % */
     }
 
     .phase-3 {
-      background: #6fd59b; /* Hellgrün */
+      background: #55C091; /* Grün ca. 80 % */
     }
 
     .phase-4 {
-      background: #17A863; /* Grün */
+      background: #31A971; /* Grün 100 % */
     }
 
     /* Scroll-Reveal */
